<resources>
    <string name="app_name">InventoryManagement</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dashboard">DashBoard</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="quanity_name">Quantity</string>
    <string name="brand_name">Brand Name</string>
    <string name="price_name">Price</string>
    <string name="product_id">Product Number</string>
    <string name="add_product_new">Add New Product</string>
    <string name="update_product">Update Product</string>
    <string name="update_quantity">Update Quantity</string>
    <string name="update_product_exit">Update Existing Product</string>
    <string name="title_activity_update_product">UpdateProductActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="no_content">No Product available, Please add new product</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="available_product">Available Product</string>
    <string name="title_activity_stock_detail">Stock Detail</string>
    <string name="stock_out">Stock Out</string>
    <string name="stock_in">Stock In</string>
    <string name="stock_on_hand">Stock On Hand</string>
    <string name="review">Review</string>

</resources>